# robotics

./: publisher.py  subscriber.py
task1/: publisher.py  subscriber.py
task2/: client.py  server.py
task4/: PoseListener.py  TurtleMover.py
task5/: SpawnClient.py  SpawnServer.py
task6/: package.xml  setup.py  trajectory.txt
task6/wall_follower/: wall_follower_node.py
task7/: package.xml  setup.py  slam_node.py
