<?xml version="1.0"?>
<package format="3">
  <name>slam_robot</name>
  <version>0.0.1</version>
  <description>SLAM node with occupancy grid</description>    
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>